# Tenure-Research

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py  usda-sandbox-handoff.md
.github/workflows/: refresh-daily.yml  refresh-data.yml
.streamlit/: config.toml
dashboard/: README.md  __init__.py  app.py
dashboard/components/: __init__.py  brief.py  cache.py  plots.py  scenarios.py  sidebar.py  theme.py
dashboard/pages/: 1_Explore.py  2_Series.py  2_Visualize.py  3_Forecast.py  4_Methodology.py  5_About.py  6_Decide.py  6_Plan.py  7_Breakeven.py  7_Costs.py  8_Pricing.py
data/: catalog.json
data/clean/: forecasts.json  observations.parquet
docs/superpowers/plans/: 2026-05-08-cme-futures.md  2026-05-08-conformal-pi.md  2026-05-08-dashboard.md  2026-05-13-continuous-futures-regressor.md
notebooks/: 01_explore.ipynb  02_visualize.ipynb  03_forecast.ipynb
src/usda_sandbox/: __init__.py  ams_lmr.py  basis.py  breakeven.py  calibration.py  catalog.py  clean.py  decision.py  direct_market.py  direct_pricing.py  forecast.py  futures.py  futures_continuous.py  futures_daily.py  ingest.py  precompute.py  sources.py  store.py
tests/: conftest.py  test_basis.py  test_breakeven.py  test_brief.py  test_calibration.py  test_catalog.py  test_clean.py  test_dashboard_plots.py  test_decision.py  test_direct_market.py  test_direct_pricing.py  test_forecast.py  test_futures.py  test_futures_continuous.py  test_futures_daily.py  test_ingest.py  test_precompute.py  test_store.py
tests/fixtures/: __init__.py
(+7 files in other folders)
